src/renderer/themes.css
/* ... */
.everforestLightHard {
  --primary-text-color: #5c6a72;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #3c4a52;
  --title-color: var(--accent-color);
  --bg-color: #fffbef;
  --favorite-icon-color: #0f0;
  --card-bg-color: #f2efdf;
  --secondary-card-bg-color: #fffbef;
  --scrollbar-color: #d8d5c5;
  --scrollbar-color-hover: #aeb5a2;
  --side-nav-color: #f2efdf;
  --side-nav-hover-color: #e2dfcf;
  --side-nav-active-color: #e2dfcf;
  --search-bar-color: #f8f5e4;
  --logo-icon: url('../../_icons/iconEverforestDarkHardSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkHardSmall.svg');
}

.everforestLightMedium {
  --primary-text-color: #5c6a72;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #3c4a52;
  --title-color: var(--accent-color);
  --bg-color: #fdf6e3;
  --favorite-icon-color: #0f0;
  --card-bg-color: #efe8d4;
  --secondary-card-bg-color: #fdf6e3;
  --scrollbar-color: #d0ccb7;
  --scrollbar-color-hover: #adb39f;
  --side-nav-color: #efe8d4;
  --side-nav-hover-color: #dfd8c4;
  --side-nav-active-color: #dfd8c4;
  --search-bar-color: #f4f0d9;
  --logo-icon: url('../../_icons/iconEverforestDarkMediumSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkMediumSmall.svg');
}

.everforestLightLow {
  --primary-text-color: #5c6a72;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #3c4a52;
  --title-color: var(--accent-color);
  --bg-color: #f3ead3;
  --favorite-icon-color: #0f0;
  --card-bg-color: #e5dfc5;
  --secondary-card-bg-color: #f3ead3;
  --scrollbar-color: #c8c3aa;
  --scrollbar-color-hover: #a9b09b;
  --side-nav-color: #e5dfc5;
  --side-nav-hover-color: #d5cfb5;
  --side-nav-active-color: #d5cfb5;
  --search-bar-color: #eae4ca;
  --logo-icon: url('../../_icons/iconEverforestDarkLowSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkLowSmall.svg');
}

/*************** PRIMARY THEME COLOR DEFINTIONS ***************/

.mainRed,
.mainPink,
.mainPurple,
.mainDeepPurple,
.mainIndigo,
.mainBlue,
.mainLightBlue,
.mainCyan,
.mainTeal,
.mainGreen {
  --text-with-main-color: #fff;
  --logo-icon-bar-color: url('../../_icons/iconWhiteSmall.svg');
  --logo-text-bar-color: url('../../_icons/textWhiteSmall.svg');
}

/* light primary theme colors */
.mainLightGreen,
.mainLime,
.mainYellow,
.mainAmber,
.mainOrange,
.mainDeepOrange {
  --text-with-main-color: #000;
  --logo-icon-bar-color: url('../../_icons/iconBlackSmall.svg');
  --logo-text-bar-color: url('../../_icons/textBlackSmall.svg');
}

.mainRed {
  --primary-color: #f44336;
  --primary-color-hover: #e53935;
  --primary-color-active: #c62828;
}

.mainPink {
  --primary-color: #e91e63;
  --primary-color-hover: #d81b60;
  --primary-color-active: #ad1457;
}

.mainPurple {
  --primary-color: #9c27b0;
  --primary-color-hover: #8e24aa;
  --primary-color-active: #6a1b9a;
}

.mainDeepPurple {
  --primary-color: #673ab7;
  --primary-color-hover: #5e35b1;
  --primary-color-active: #4527a0;
}

.mainIndigo {
  --primary-color: #3f51b5;
  --primary-color-hover: #3949ab;
  --primary-color-active: #283593;
}

.mainBlue {
  --primary-color: #2196f3;
  --primary-color-hover: #1e88e5;
  --primary-color-active: #1565c0;
}

.mainLightBlue {
  --primary-color: #03a9f4;
  --primary-color-hover: #039be5;
  --primary-color-active: #0277bd;
}

.mainCyan {
  --primary-color: #00bcd4;
  --primary-color-hover: #00acc1;
  --primary-color-active: #00838f;
}

.mainTeal {
  --primary-color: #009688;
  --primary-color-hover: #00897b;
  --primary-color-active: #00695c;
}

.mainGreen {
  --primary-color: #4caf50;
  --primary-color-hover: #43a047;
  --primary-color-active: #2e7d32;
}

.mainLightGreen {
  --primary-color: #8bc34a;
  --primary-color-hover: #7cb342;
  --primary-color-active: #558b2f;
}

.mainLime {
  --primary-color: #cddc39;
  --primary-color-hover: #c0ca33;
  --primary-color-active: #9e9d24;
}

.mainYellow {
  --primary-color: #ffeb3b;
  --primary-color-hover: #fdd835;
  --primary-color-active: #f9a825;
}

.mainAmber {
  --primary-color: #ffc107;
  --primary-color-hover: #ffb300;
  --primary-color-active: #ff8f00;
}

.mainOrange {
  --primary-color: #ff9800;
  --primary-color-hover: #fb8c00;
  --primary-color-active: #ef6c00;
}

.mainDeepOrange {
  --primary-color: #ff5722;
  --primary-color-hover: #f4511e;
  --primary-color-active: #d84315;
}


/* PRIMARY THEME COLORS CORRESPONDING TO BASE THEMES */

.mainCatppuccinMochaRosewater,
.mainCatppuccinMochaFlamingo,
.mainCatppuccinMochaPink,
.mainCatppuccinMochaMauve,
.mainCatppuccinMochaRed,
.mainCatppuccinMochaMaroon,
.mainCatppuccinMochaPeach,
.mainCatppuccinMochaYellow,
.mainCatppuccinMochaGreen,
.mainCatppuccinMochaTeal,
.mainCatppuccinMochaSky,
.mainCatppuccinMochaSapphire,
.mainCatppuccinMochaBlue,
.mainCatppuccinMochaLavender {
  --text-with-main-color: #1e1e2e;
  --logo-icon-bar-color: url('../../_icons/iconCatppuccinMochaDarkSmall.svg');
  --logo-text-bar-color: url('../../_icons/textCatppuccinMochaDarkSmall.svg');
}

.mainCatppuccinMochaRosewater {
  --primary-color: #f5e0dc;
  --primary-color-hover: #fceeec;
  --primary-color-active: #e1c8c3;
}

.mainCatppuccinMochaFlamingo {
  --primary-color: #f2cdcd;
  --primary-color-hover: #f2e1e1;
  --primary-color-active: #ddb7b7;
}

.mainCatppuccinMochaPink {
  --primary-color: #f5c2e7;
  --primary-color-hover: #f3d2ea;
  --primary-color-active: #dca3cd;
}

.mainCatppuccinMochaMauve {
  --primary-color: #cba6f7;
  --primary-color-hover: #d4b7f8;
  --primary-color-active: #b38fdf;
}

.mainCatppuccinMochaRed {
  --primary-color: #f38ba8;
  --primary-color-hover: #f0a4b9;
  --primary-color-active: #de7693;
}

.mainCatppuccinMochaMaroon {
  --primary-color: #eba0ac;
  --primary-color-hover: #eabbc3;
  --primary-color-active: #d68895;
}

.mainCatppuccinMochaPeach {
  --primary-color: #fab387;
  --primary-color-hover: #f7c7a9;
  --primary-color-active: #e1996d;
}

.mainCatppuccinMochaYellow {
  --primary-color: #f9e2af;
  --primary-color-hover: #feeecd;
  --primary-color-active: #dec48d;
}
/* ... */

